2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Performance.mdp: New. Project file for MonoDevelop.
	* EmptyDestructorTest.cs,
	  IDisposableWithDestructorWithoutSuppressFinalizeTest.cs:
		Add a property for the IntPtr to remove compiler warnings.

2006-03-01  Sebastien Pouliot  <sebastien@ximian.com>

	* EmptyDestructorTest.cs,
	  IDisposableWithDestructorWithoutSuppressFinalizeTest.cs:
		Conditions for success/failure were inverted when Gendarme 
		framework was updated.