@@ -17,6 +17,7 @@
   <Contents>
     <File name="./EmptyDestructorTest.cs" subtype="Code" buildaction="Compile" />
     <File name="./IDisposableWithDestructorWithoutSuppressFinalizeTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="./UseStringEmptyTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
